fixed global text-align mistake

--- a/src/stylesheets/recorder.css
+++ b/src/stylesheets/recorder.css
@@ -1,4 +1,4 @@
-body {
+.recorder {
     text-align: center;
 }
 
